Response/Validations/ConfigServer/EurekaServer